--- a/AspNetTemplate/Views/Home/Index.cshtml
+++ b/AspNetTemplate/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>ASP.NET - [@ViewBag.Ambiente]</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">Microsof Azure App Service - Deployment Slots ROCKS!!!</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
