--- a/AspNetTemplate/Views/Home/Index.cshtml
+++ b/AspNetTemplate/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>ASP.NET - [@ViewBag.Ambiente]</h1>
-    <p class="lead">Microsof Azure App Service</p>
+    <p class="lead">Microsof Azure App Service - Azure Tech Nights ROCKS!!!</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
