--- a/AspNetTemplate/Views/Home/Index.cshtml
+++ b/AspNetTemplate/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET - [@ViewBag.Ambiente]</h1>
+    <h1>ASP.NET</h1>
     <p class="lead">Microsof Azure App Service - Azure Tech Nights ROCKS!!!</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
